# Algorithms-Art-Gallery

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
input/: input01 - Copy.txt  input01.txt  input02.txt  input03.txt  input04.txt  input05.txt
output/: input01-bruteforce.txt  input01-highvalue.txt
src/: ArtGallery.cpp  ArtGallery.h  Painting.cpp  Painting.h  Wall.cpp  Wall.hpp  main.cpp
test/: input.txt
